重构了代码结构 增强了可读性

--- a/Cano/PROJECT/STM32F4xx.uvprojx
+++ b/Cano/PROJECT/STM32F4xx.uvprojx
@@ -784,6 +784,16 @@
               <FileType>5</FileType>
               <FilePath>..\USER\MyUSART.h</FilePath>
             </File>
+            <File>
+              <FileName>MySBUS.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\MySBUS.c</FilePath>
+            </File>
+            <File>
+              <FileName>MySBUS.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\MySBUS.h</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
