--- a/Cano/PROJECT/STM32F4xx.uvprojx
+++ b/Cano/PROJECT/STM32F4xx.uvprojx
@@ -652,149 +652,197 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>USER</GroupName>
+          <GroupName>USER/Motor</GroupName>
           <Files>
-            <File>
-              <FileName>MyHMC5883L.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\MyHMC5883L.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyHMC5883L.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MyHMC5883L.h</FilePath>
-            </File>
-            <File>
-              <FileName>MyBMP.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\MyBMP.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyBMP.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MyBMP.h</FilePath>
-            </File>
-            <File>
-              <FileName>MyDMA.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\MyDMA.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyDMA.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MyDMA.h</FilePath>
-            </File>
-            <File>
-              <FileName>MyI2S.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\MyI2S.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyI2S.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MyI2S.h</FilePath>
-            </File>
-            <File>
-              <FileName>MyHC05.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\MyHC05.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyHC05.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MyHC05.h</FilePath>
-            </File>
-            <File>
-              <FileName>Delay.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\Delay.c</FilePath>
-            </File>
-            <File>
-              <FileName>Delay.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\Delay.h</FilePath>
-            </File>
-            <File>
-              <FileName>main.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\main.c</FilePath>
-            </File>
-            <File>
-              <FileName>MPU6050.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MPU6050.h</FilePath>
-            </File>
             <File>
               <FileName>MyDShot.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\MyDShot.c</FilePath>
+              <FilePath>..\USER\Motor\MyDShot.c</FilePath>
             </File>
             <File>
               <FileName>MyDShot.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\USER\MyDShot.h</FilePath>
+              <FilePath>..\USER\Motor\MyDShot.h</FilePath>
             </File>
             <File>
-              <FileName>MyI2C.c</FileName>
+              <FileName>MyDShot_DMA.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\MyI2C.c</FilePath>
+              <FilePath>..\USER\Motor\MyDShot_DMA.c</FilePath>
             </File>
             <File>
-              <FileName>MyI2C.h</FileName>
+              <FileName>MyDShot_DMA.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\USER\MyI2C.h</FilePath>
+              <FilePath>..\USER\Motor\MyDShot_DMA.h</FilePath>
             </File>
             <File>
-              <FileName>MyMPU6050.c</FileName>
+              <FileName>MyMotorMixer.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\MyMPU6050.c</FilePath>
+              <FilePath>..\USER\Motor\MyMotorMixer.c</FilePath>
             </File>
             <File>
-              <FileName>MyMPU6050.h</FileName>
+              <FileName>MyMotorMixer.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\USER\MyMPU6050.h</FilePath>
+              <FilePath>..\USER\Motor\MyMotorMixer.h</FilePath>
             </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>USER/Core</GroupName>
+          <Files>
             <File>
-              <FileName>MyMS5611.c</FileName>
+              <FileName>main.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\MyMS5611.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyMS5611.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\USER\MyMS5611.h</FilePath>
+              <FilePath>..\USER\Core\main.c</FilePath>
             </File>
             <File>
               <FileName>Mysystem_clock.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\Mysystem_clock.c</FilePath>
+              <FilePath>..\USER\Core\Mysystem_clock.c</FilePath>
             </File>
             <File>
               <FileName>Mysystem_clock.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\USER\Mysystem_clock.h</FilePath>
+              <FilePath>..\USER\Core\Mysystem_clock.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>USER/Sensor</GroupName>
+          <Files>
+            <File>
+              <FileName>MPU6050.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Sensors\MPU6050.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyBMP.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Sensors\MyBMP.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyBMP.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Sensors\MyBMP.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyHMC5883L.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Sensors\MyHMC5883L.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyHMC5883L.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Sensors\MyHMC5883L.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyMPU6050.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Sensors\MyMPU6050.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyMPU6050.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Sensors\MyMPU6050.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyMS5611.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Sensors\MyMS5611.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyMS5611.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Sensors\MyMS5611.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>USER/Drivers</GroupName>
+          <Files>
+            <File>
+              <FileName>Delay.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Drivers\Delay.c</FilePath>
+            </File>
+            <File>
+              <FileName>Delay.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Drivers\Delay.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyDMA.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Drivers\MyDMA.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyDMA.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Drivers\MyDMA.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyI2C.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Drivers\MyI2C.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyI2C.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Drivers\MyI2C.h</FilePath>
+            </File>
+            <File>
+              <FileName>MyI2S.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Drivers\MyI2S.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyI2S.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Drivers\MyI2S.h</FilePath>
             </File>
             <File>
               <FileName>MyUSART.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\MyUSART.c</FilePath>
+              <FilePath>..\USER\Drivers\MyUSART.c</FilePath>
             </File>
             <File>
               <FileName>MyUSART.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\USER\MyUSART.h</FilePath>
+              <FilePath>..\USER\Drivers\MyUSART.h</FilePath>
             </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>USER/RC</GroupName>
+          <Files>
             <File>
               <FileName>MySBUS.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\MySBUS.c</FilePath>
+              <FilePath>..\USER\RC\MySBUS.c</FilePath>
             </File>
             <File>
               <FileName>MySBUS.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\USER\MySBUS.h</FilePath>
+              <FilePath>..\USER\RC\MySBUS.h</FilePath>
             </File>
           </Files>
+        </Group>
+        <Group>
+          <GroupName>USER/Wireless</GroupName>
+          <Files>
+            <File>
+              <FileName>MyHC05.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Wireless\MyHC05.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyHC05.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\USER\Wireless\MyHC05.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>USER/Control</GroupName>
         </Group>
       </Groups>
     </Target>
